Modal overlapping fields(fixed) Nilipat ko ung script mo red sa index.js

--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,7 @@ justify-content: space-between;
     color: #333;
 	padding:15px 20px;
 	text-transform:uppercase;
-	margin-top:30px;
+	margin-top:0px;
 	border-radius:8px;
 	cursor:pointer;
 	position:relative;
@@ -208,7 +208,7 @@ justify-content: space-between;
 }
 /* ERROR */
 #error, #modal-error{
-  height: 0px;
+  /* height: 0px; */
   color: red;
   font-size: 16px;
   text-align: center;
